--- a/src/gtk/gtk-3.0/gtk-light-blue.css
+++ b/src/gtk/gtk-3.0/gtk-light-blue.css
@@ -3247,7 +3247,7 @@ treeview.check {
 
 .osd check,
 filechooser actionbar check {
-  -gtk-icon-source: -gtk-scaled(url("assets/checkbox-unchecked-dark.png"), url("assets/checkbox-unchecked-dark@2.png"));
+  -gtk-icon-source: -gtk-scaled(url("assets/checkbox-unchecked.png"), url("assets/checkbox-unchecked@2.png"));
 }
 
 menuitem check:hover,
@@ -3266,7 +3266,7 @@ treeview.check:disabled {
 
 .osd check:disabled,
 filechooser actionbar check:disabled {
-  -gtk-icon-source: -gtk-scaled(url("assets/checkbox-unchecked-insensitive-dark.png"), url("assets/checkbox-unchecked-insensitive-dark@2.png"));
+  -gtk-icon-source: -gtk-scaled(url("assets/checkbox-unchecked-insensitive.png"), url("assets/checkbox-unchecked-insensitive@2.png"));
 }
 
 menuitem check:disabled:hover,
@@ -3285,7 +3285,7 @@ treeview.check:indeterminate {
 
 .osd check:indeterminate,
 filechooser actionbar check:indeterminate {
-  -gtk-icon-source: -gtk-scaled(url("assets/checkbox-mixed-dark.png"), url("assets/checkbox-mixed-dark@2.png"));
+  -gtk-icon-source: -gtk-scaled(url("assets/checkbox-mixed.png"), url("assets/checkbox-mixed@2.png"));
 }
 
 menuitem check:indeterminate:hover,
@@ -3304,7 +3304,7 @@ treeview.check:indeterminate:disabled {
 
 .osd check:indeterminate:disabled,
 filechooser actionbar check:indeterminate:disabled {
-  -gtk-icon-source: -gtk-scaled(url("assets/checkbox-mixed-insensitive-dark.png"), url("assets/checkbox-mixed-insensitive-dark@2.png"));
+  -gtk-icon-source: -gtk-scaled(url("assets/checkbox-mixed-insensitive.png"), url("assets/checkbox-mixed-insensitive@2.png"));
 }
 
 menuitem check:indeterminate:disabled:hover,
@@ -3323,7 +3323,7 @@ treeview.check:checked {
 
 .osd check:checked,
 filechooser actionbar check:checked {
-  -gtk-icon-source: -gtk-scaled(url("assets/checkbox-checked-dark.png"), url("assets/checkbox-checked-dark@2.png"));
+  -gtk-icon-source: -gtk-scaled(url("assets/checkbox-checked.png"), url("assets/checkbox-checked@2.png"));
 }
 
 menuitem check:checked:hover,
@@ -3342,7 +3342,7 @@ treeview.check:checked:disabled {
 
 .osd check:checked:disabled,
 filechooser actionbar check:checked:disabled {
-  -gtk-icon-source: -gtk-scaled(url("assets/checkbox-checked-insensitive-dark.png"), url("assets/checkbox-checked-insensitive-dark@2.png"));
+  -gtk-icon-source: -gtk-scaled(url("assets/checkbox-checked-insensitive.png"), url("assets/checkbox-checked-insensitive@2.png"));
 }
 
 menuitem check:checked:disabled:hover,
@@ -3361,7 +3361,7 @@ treeview.radio {
 
 .osd radio,
 filechooser actionbar radio {
-  -gtk-icon-source: -gtk-scaled(url("assets/radio-unchecked-dark.png"), url("assets/radio-unchecked-dark@2.png"));
+  -gtk-icon-source: -gtk-scaled(url("assets/radio-unchecked.png"), url("assets/radio-unchecked@2.png"));
 }
 
 menuitem radio:hover,
@@ -3380,7 +3380,7 @@ treeview.radio:disabled {
 
 .osd radio:disabled,
 filechooser actionbar radio:disabled {
-  -gtk-icon-source: -gtk-scaled(url("assets/radio-unchecked-insensitive-dark.png"), url("assets/radio-unchecked-insensitive-dark@2.png"));
+  -gtk-icon-source: -gtk-scaled(url("assets/radio-unchecked-insensitive.png"), url("assets/radio-unchecked-insensitive@2.png"));
 }
 
 menuitem radio:disabled:hover,
@@ -3399,7 +3399,7 @@ treeview.radio:indeterminate {
 
 .osd radio:indeterminate,
 filechooser actionbar radio:indeterminate {
-  -gtk-icon-source: -gtk-scaled(url("assets/radio-mixed-dark.png"), url("assets/radio-mixed-dark@2.png"));
+  -gtk-icon-source: -gtk-scaled(url("assets/radio-mixed.png"), url("assets/radio-mixed@2.png"));
 }
 
 menuitem radio:indeterminate:hover,
@@ -3418,7 +3418,7 @@ treeview.radio:indeterminate:disabled {
 
 .osd radio:indeterminate:disabled,
 filechooser actionbar radio:indeterminate:disabled {
-  -gtk-icon-source: -gtk-scaled(url("assets/radio-mixed-insensitive-dark.png"), url("assets/radio-mixed-insensitive-dark@2.png"));
+  -gtk-icon-source: -gtk-scaled(url("assets/radio-mixed-insensitive.png"), url("assets/radio-mixed-insensitive@2.png"));
 }
 
 menuitem radio:indeterminate:disabled:hover,
@@ -3437,7 +3437,7 @@ treeview.radio:checked {
 
 .osd radio:checked,
 filechooser actionbar radio:checked {
-  -gtk-icon-source: -gtk-scaled(url("assets/radio-checked-dark.png"), url("assets/radio-checked-dark@2.png"));
+  -gtk-icon-source: -gtk-scaled(url("assets/radio-checked.png"), url("assets/radio-checked@2.png"));
 }
 
 menuitem radio:checked:hover,
@@ -3456,7 +3456,7 @@ treeview.radio:checked:disabled {
 
 .osd radio:checked:disabled,
 filechooser actionbar radio:checked:disabled {
-  -gtk-icon-source: -gtk-scaled(url("assets/radio-checked-insensitive-dark.png"), url("assets/radio-checked-insensitive-dark@2.png"));
+  -gtk-icon-source: -gtk-scaled(url("assets/radio-checked-insensitive.png"), url("assets/radio-checked-insensitive@2.png"));
 }
 
 menuitem radio:checked:disabled:hover,
@@ -3598,7 +3598,7 @@ scale slider {
   min-height: 15px;
   min-width: 15px;
   margin: -6px;
-  background-color: #FAFAFA;
+  background-color: #4F5868;
   border: 1px solid rgba(0, 0, 0, 0.15);
   border-radius: 100%;
   transition: all 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
@@ -3618,7 +3618,7 @@ scale slider:active {
 }
 
 scale slider:disabled {
-  background-color: #e1e1e1;
+  background-color: #393f4b;
   border-color: rgba(0, 0, 0, 0.15);
 }
 
@@ -8857,7 +8857,7 @@ window#XfcePanelWindow.background.panel.xfce4-panel > widget wnck-pager:active, 
 XfdesktopIconView.view {
   border-radius: 2px;
   background: transparent;
-  color: #FAFAFA;
+  color: #4B505B;
   text-shadow: 0 0 1px rgba(0, 0, 0, 0.26), 0 1px 2px rgba(0, 0, 0, 0.32), 0 2px 3px rgba(0, 0, 0, 0.12);
 }
 
@@ -8914,7 +8914,7 @@ window#whiskermenu-window > frame > stack button {
 
 window#whiskermenu-window > frame > stack button:hover {
   background-color: rgba(75, 80, 91, 0.12);
-  color: #050505;
+  color: #b4afa4;
   border-color: rgba(0, 0, 0, 0.2);
 }
 
@@ -9020,7 +9020,7 @@ window.thunar notebook header.top tab.reorderable-page > box > label {
 }
 
 #pulseaudio-button menuitem:hover scale highlight, #xfce4-power-manager-plugin menuitem:hover scale highlight {
-  background-color: #FAFAFA;
+  background-color: #4B505B;
 }
 
 /**********************
