--- a/src/cinnamon/cinnamon-dark-purple.css
+++ b/src/cinnamon/cinnamon-dark-purple.css
@@ -13,51 +13,51 @@ stage {
   padding: 5px 32px;
   transition-duration: 0;
   border-radius: 2px;
-  text-shadow: 0 1px rgba(54, 58, 78, 0);
+  text-shadow: 0 1px rgba(51, 54, 72, 0);
   color: #DDE2E7;
-  background-color: #3a3e54;
+  background-color: #373a4e;
   border: 1px solid #272834;
-  box-shadow: inset 0 2px 4px rgba(58, 62, 84, 0.05);
+  box-shadow: inset 0 2px 4px rgba(55, 58, 78, 0.05);
 }
 
 .sound-button:focus, .menu #notification .notification-button:focus, .menu #notification .notification-icon-button:focus, .popup-menu #notification .notification-button:focus, .popup-menu #notification .notification-icon-button:focus {
-  text-shadow: 0 1px rgba(54, 58, 78, 0);
+  text-shadow: 0 1px rgba(51, 54, 72, 0);
   color: #DDE2E7;
-  background-color: #3a3e54;
+  background-color: #373a4e;
   border: 1px solid #D38AEA;
-  box-shadow: inset 0 2px 4px rgba(58, 62, 84, 0.05);
+  box-shadow: inset 0 2px 4px rgba(55, 58, 78, 0.05);
 }
 
 .sound-button:hover, .menu #notification .notification-button:hover, .menu #notification .notification-icon-button:hover, .popup-menu #notification .notification-button:hover, .popup-menu #notification .notification-icon-button:hover {
-  text-shadow: 0 1px rgba(54, 58, 78, 0);
+  text-shadow: 0 1px rgba(51, 54, 72, 0);
   color: #DDE2E7;
-  background-color: #454a63;
+  background-color: #42465d;
   border: 1px solid #272834;
-  box-shadow: inset 0 2px 4px rgba(69, 74, 99, 0.05);
+  box-shadow: inset 0 2px 4px rgba(66, 70, 93, 0.05);
 }
 
 .sound-button:hover:focus, .menu #notification .notification-button:hover:focus, .menu #notification .notification-icon-button:hover:focus, .popup-menu #notification .notification-button:hover:focus, .popup-menu #notification .notification-icon-button:hover:focus {
-  text-shadow: 0 1px rgba(54, 58, 78, 0);
+  text-shadow: 0 1px rgba(51, 54, 72, 0);
   color: #DDE2E7;
-  background-color: #3a3e54;
+  background-color: #373a4e;
   border: 1px solid #D38AEA;
-  box-shadow: inset 0 2px 4px rgba(58, 62, 84, 0.05);
+  box-shadow: inset 0 2px 4px rgba(55, 58, 78, 0.05);
 }
 
 .sound-button:active, .menu #notification .notification-button:active, .menu #notification .notification-icon-button:active, .popup-menu #notification .notification-button:active, .popup-menu #notification .notification-icon-button:active {
-  text-shadow: 0 1px rgba(54, 58, 78, 0);
-  color: #363A4E;
+  text-shadow: 0 1px rgba(51, 54, 72, 0);
+  color: #333648;
   background-color: #D38AEA;
   border: 1px solid #D38AEA;
   box-shadow: inset 0 2px 4px #D38AEA;
 }
 
 .sound-button:insensitive, .menu #notification .notification-button:insensitive, .menu #notification .notification-icon-button:insensitive, .popup-menu #notification .notification-button:insensitive, .popup-menu #notification .notification-icon-button:insensitive {
-  text-shadow: 0 1px rgba(54, 58, 78, 0);
+  text-shadow: 0 1px rgba(51, 54, 72, 0);
   color: rgba(221, 226, 231, 0.45);
   border: 1px solid rgba(39, 40, 52, 0.55);
-  background-color: rgba(58, 62, 84, 0.55);
-  box-shadow: inset 0 2px 4px rgba(58, 62, 84, 0.05);
+  background-color: rgba(55, 58, 78, 0.55);
+  box-shadow: inset 0 2px 4px rgba(55, 58, 78, 0.05);
 }
 
 .modal-dialog-button-box .modal-dialog-button, .notification-button, .notification-icon-button {
@@ -65,14 +65,14 @@ stage {
   padding: 5px 32px;
   transition-duration: 0;
   border-radius: 2px;
-  text-shadow: 0 1px rgba(54, 58, 78, 0);
+  text-shadow: 0 1px rgba(51, 54, 72, 0);
   color: #C5CDD9;
   border: 1px solid rgba(53, 59, 69, 0.35);
   background-color: rgba(133, 143, 162, 0.35);
 }
 
 .modal-dialog-button-box .modal-dialog-button:hover, .notification-button:hover, .notification-icon-button:hover {
-  text-shadow: 0 1px rgba(54, 58, 78, 0);
+  text-shadow: 0 1px rgba(51, 54, 72, 0);
   color: #C5CDD9;
   border: 1px solid rgba(53, 59, 69, 0.35);
   background-color: rgba(153, 162, 178, 0.45);
@@ -83,14 +83,14 @@ stage {
 }
 
 .modal-dialog-button-box .modal-dialog-button:active, .notification-button:active, .notification-icon-button:active {
-  text-shadow: 0 1px rgba(54, 58, 78, 0);
-  color: #363A4E;
+  text-shadow: 0 1px rgba(51, 54, 72, 0);
+  color: #333648;
   border: 1px solid #D38AEA;
   background-color: #D38AEA;
 }
 
 .modal-dialog-button-box .modal-dialog-button:insensitive, .notification-button:insensitive, .notification-icon-button:insensitive {
-  text-shadow: 0 1px rgba(54, 58, 78, 0);
+  text-shadow: 0 1px rgba(51, 54, 72, 0);
   color: #727b8a;
   border: 1px solid rgba(53, 59, 69, 0.35);
   background-color: rgba(133, 143, 162, 0.2);
@@ -100,25 +100,25 @@ stage {
   padding: 7px;
   caret-size: 1px;
   selection-background-color: #D38AEA;
-  selected-color: #363A4E;
+  selected-color: #333648;
   transition-duration: 300ms;
   border-radius: 3px;
   color: #C5CDD9;
-  background-color: #363a4e;
+  background-color: #333648;
   border: 1px solid #272834;
   box-shadow: none;
 }
 
 #menu-search-entry:focus, .menu #notification StEntry:focus, .popup-menu #notification StEntry:focus, #menu-search-entry:hover, .menu #notification StEntry:hover, .popup-menu #notification StEntry:hover {
   color: #DDE2E7;
-  background-color: #363a4e;
+  background-color: #333648;
   border: 1px solid #D38AEA;
   box-shadow: none;
 }
 
 #menu-search-entry:insensitive, .menu #notification StEntry:insensitive, .popup-menu #notification StEntry:insensitive {
   color: rgba(221, 226, 231, 0.45);
-  background-color: #313445;
+  background-color: #2f3242;
   border-color: 1px solid #292b37;
   box-shadow: none;
 }
@@ -134,7 +134,7 @@ stage {
   caret-size: 1px;
   caret-color: #C5CDD9;
   selection-background-color: #D38AEA;
-  selected-color: #363A4E;
+  selected-color: #333648;
   transition-duration: 300ms;
   border-radius: 3px;
   color: #C5CDD9;
@@ -144,7 +144,7 @@ stage {
 }
 
 .notification StEntry:focus {
-  color: #363A4E;
+  color: #333648;
   background-color: #D38AEA;
   border: 1px solid #D38AEA;
   box-shadow: none;
@@ -175,7 +175,7 @@ StScrollView StScrollBar {
 }
 
 StScrollBar StBin#trough {
-  background-color: rgba(54, 58, 78, 0.1);
+  background-color: rgba(51, 54, 72, 0.1);
   border-radius: 8px;
 }
 
@@ -221,7 +221,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 
 .popup-menu-item:active .popup-slider-menu-item, .popup-menu-item:active .slider {
   -slider-background-color: rgba(0, 0, 0, 0.2);
-  -slider-active-background-color: #363A4E;
+  -slider-active-background-color: #333648;
 }
 
 .check-box CinnamonGenericContainer {
@@ -384,7 +384,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 .menu .popup-menu-item:active,
 .popup-menu .popup-menu-item:active,
 .popup-combo-menu .popup-menu-item:active {
-  color: #363A4E;
+  color: #333648;
   background-color: transparent;
   border-image: url("common-assets/menu/menu-hover.svg") 9 9 1 1;
 }
@@ -411,7 +411,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 .menu .popup-menu-item:active .popup-inactive-menu-item,
 .popup-menu .popup-menu-item:active .popup-inactive-menu-item,
 .popup-combo-menu .popup-menu-item:active .popup-inactive-menu-item {
-  color: #363A4E;
+  color: #333648;
 }
 
 .menu-icon,
@@ -608,7 +608,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 
 .window-caption#selected {
   background-color: #D38AEA;
-  color: #363A4E;
+  color: #333648;
   border: 1px solid #D38AEA;
   spacing: 25px;
 }
@@ -630,10 +630,10 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 .expo-workspaces-name-entry#selected:focus {
   border: 1px solid #D38AEA;
   background-color: #D38AEA;
-  color: #363A4E;
+  color: #333648;
   font-style: italic;
   transition-duration: 300;
-  selection-background-color: #363A4E;
+  selection-background-color: #333648;
   selected-color: #D38AEA;
 }
 
@@ -738,7 +738,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 .about-scrollBox {
   border: 1px solid #272834;
   border-radius: 2px;
-  background-color: #363A4E;
+  background-color: #333648;
   padding: 4px;
   padding-right: 0;
   border-radius: 0;
@@ -874,7 +874,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 .calendar-today:focus,
 .calendar-today:hover {
   font-weight: bold;
-  color: #363A4E;
+  color: #333648;
   background-color: #D38AEA;
   border-width: 0;
 }
@@ -987,7 +987,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 }
 
 .switcher-list .item-box:selected {
-  color: #363A4E;
+  color: #333648;
   background-color: #D38AEA;
   border: 0px solid #D38AEA;
 }
@@ -1114,7 +1114,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
   padding: 7px;
   border-radius: 3px;
   caret-color: #C5CDD9;
-  selected-color: #363A4E;
+  selected-color: #333648;
   selection-background-color: #D38AEA;
 }
 
@@ -1244,28 +1244,28 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
   font-weight: bold;
   border-radius: 3px;
   box-shadow: none;
-  text-shadow: 0 1px rgba(54, 58, 78, 0);
+  text-shadow: 0 1px rgba(51, 54, 72, 0);
   color: #C5CDD9;
   border: 1px solid rgba(53, 59, 69, 0.35);
   background-color: rgba(133, 143, 162, 0.35);
 }
 
 .keyboard-key:hover {
-  text-shadow: 0 1px rgba(54, 58, 78, 0);
+  text-shadow: 0 1px rgba(51, 54, 72, 0);
   color: #C5CDD9;
   border: 1px solid rgba(53, 59, 69, 0.35);
   background-color: rgba(153, 162, 178, 0.45);
 }
 
 .keyboard-key:active, .keyboard-key:checked {
-  text-shadow: 0 1px rgba(54, 58, 78, 0);
-  color: #363A4E;
+  text-shadow: 0 1px rgba(51, 54, 72, 0);
+  color: #333648;
   border: 1px solid #D38AEA;
   background-color: #D38AEA;
 }
 
 .keyboard-key:grayed {
-  text-shadow: 0 1px rgba(54, 58, 78, 0);
+  text-shadow: 0 1px rgba(51, 54, 72, 0);
   color: #727b8a;
   border: 1px solid rgba(53, 59, 69, 0.35);
   background-color: rgba(133, 143, 162, 0.2);
@@ -1297,11 +1297,11 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 }
 
 .menu-favorites-button:hover {
-  text-shadow: 0 1px rgba(54, 58, 78, 0);
+  text-shadow: 0 1px rgba(51, 54, 72, 0);
   color: #DDE2E7;
-  background-color: #454a63;
+  background-color: #42465d;
   border: 1px solid #272834;
-  box-shadow: inset 0 2px 4px rgba(69, 74, 99, 0.05);
+  box-shadow: inset 0 2px 4px rgba(66, 70, 93, 0.05);
 }
 
 .menu-places-box {
@@ -1333,11 +1333,11 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 
 .menu-application-button-selected {
   padding: 7px;
-  text-shadow: 0 1px rgba(54, 58, 78, 0);
+  text-shadow: 0 1px rgba(51, 54, 72, 0);
   color: #DDE2E7;
-  background-color: #454a63;
+  background-color: #42465d;
   border: 1px solid #272834;
-  box-shadow: inset 0 2px 4px rgba(69, 74, 99, 0.05);
+  box-shadow: inset 0 2px 4px rgba(66, 70, 93, 0.05);
 }
 
 .menu-application-button-selected:highlighted {
@@ -1359,19 +1359,19 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 
 .menu-category-button-selected {
   padding: 7px;
-  text-shadow: 0 1px rgba(54, 58, 78, 0);
+  text-shadow: 0 1px rgba(51, 54, 72, 0);
   color: #DDE2E7;
-  background-color: #454a63;
+  background-color: #42465d;
   border: 1px solid #272834;
-  box-shadow: inset 0 2px 4px rgba(69, 74, 99, 0.05);
+  box-shadow: inset 0 2px 4px rgba(66, 70, 93, 0.05);
 }
 
 .menu-category-button-hover {
-  text-shadow: 0 1px rgba(54, 58, 78, 0);
+  text-shadow: 0 1px rgba(51, 54, 72, 0);
   color: #DDE2E7;
-  background-color: #454a63;
+  background-color: #42465d;
   border: 1px solid #272834;
-  box-shadow: inset 0 2px 4px rgba(69, 74, 99, 0.05);
+  box-shadow: inset 0 2px 4px rgba(66, 70, 93, 0.05);
   border-radius: 2px;
 }
 
@@ -1584,7 +1584,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 }
 
 .window-list-item-box:active, .window-list-item-box:checked, .window-list-item-box:running {
-  color: #363A4E;
+  color: #333648;
   border: 0 solid rgba(211, 138, 234, 0.35);
   background-gradient-direction: none;
 }
@@ -1610,7 +1610,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 }
 
 .window-list-item-box:focus {
-  color: #363A4E;
+  color: #333648;
   border: 0 solid #D38AEA;
   background-gradient-direction: none;
 }
@@ -1678,7 +1678,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 }
 
 .grouped-window-list-thumbnail-menu .item-box:selected {
-  background-color: rgba(54, 58, 78, 0.33);
+  background-color: rgba(51, 54, 72, 0.33);
 }
 
 .grouped-window-list-thumbnail-menu .thumbnail {
@@ -1694,7 +1694,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
   z-index: 99;
   text-shadow: none;
   font-size: 10px;
-  color: #363A4E;
+  color: #333648;
   padding: 0;
 }
 
@@ -1774,7 +1774,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 }
 
 .grouped-window-list-item-box:active, .grouped-window-list-item-box:checked, .grouped-window-list-item-box:running {
-  color: #363A4E;
+  color: #333648;
   border: 0 solid rgba(211, 138, 234, 0.35);
   background-gradient-direction: none;
 }
@@ -1800,7 +1800,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 }
 
 .grouped-window-list-item-box:focus {
-  color: #363A4E;
+  color: #333648;
   border: 0 solid #D38AEA;
   background-gradient-direction: none;
 }
@@ -1951,15 +1951,15 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 }
 
 .sound-player-overlay StButton:hover {
-  text-shadow: 0 1px rgba(54, 58, 78, 0);
+  text-shadow: 0 1px rgba(51, 54, 72, 0);
   color: #C5CDD9;
   border: 1px solid rgba(53, 59, 69, 0.35);
   background-color: rgba(153, 162, 178, 0.45);
 }
 
 .sound-player-overlay StButton:active {
-  text-shadow: 0 1px rgba(54, 58, 78, 0);
-  color: #363A4E;
+  text-shadow: 0 1px rgba(51, 54, 72, 0);
+  color: #333648;
   background-color: #D38AEA;
   border: 1px solid #D38AEA;
   box-shadow: inset 0 2px 4px #D38AEA;
@@ -1996,7 +1996,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 .workspace-button {
   width: 20px;
   height: 10px;
-  color: #363A4E;
+  color: #333648;
   padding: 3px;
   padding-top: 4px;
   transition-duration: 300;
@@ -2153,7 +2153,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 }
 
 .applet-box:checked, .applet-box:checked:hover {
-  color: #363A4E;
+  color: #333648;
   background-color: #D38AEA;
 }
 
@@ -2169,7 +2169,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 }
 
 .applet-box:checked .applet-label {
-  color: #363A4E;
+  color: #333648;
   text-shadow: none;
 }
 
@@ -2179,7 +2179,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 }
 
 .applet-box:checked .applet-icon {
-  color: #363A4E;
+  color: #333648;
   text-shadow: none;
 }
 
