--- a/src/cinnamon/cinnamon-dark-blue.css
+++ b/src/cinnamon/cinnamon-dark-blue.css
@@ -125,7 +125,7 @@ stage {
 
 #menu-search-entry StIcon.capslock-warning, .menu #notification StEntry StIcon.capslock-warning, .popup-menu #notification StEntry StIcon.capslock-warning {
   icon-size: 16px;
-  warning-color: #DEB974;
+  warning-color: #CE9C3D;
   padding: 0 4px;
 }
 
@@ -468,7 +468,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 
 #panel:highlight {
   border-image: none;
-  background-color: rgba(236, 114, 121, 0.5);
+  background-color: rgba(225, 115, 115, 0.5);
 }
 
 #panelLeft {
@@ -562,11 +562,11 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 }
 
 .panel-dummy {
-  background-color: rgba(236, 114, 121, 0.5);
+  background-color: rgba(225, 115, 115, 0.5);
 }
 
 .panel-dummy:entered {
-  background-color: rgba(236, 114, 121, 0.6);
+  background-color: rgba(225, 115, 115, 0.6);
 }
 
 .panel-status-button {
@@ -1091,13 +1091,13 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 }
 
 .run-dialog-error-label {
-  color: #EC7279;
+  color: #E17373;
 }
 
 .run-dialog-error-box {
   padding-top: 15px;
   spacing: 5px;
-  color: #EC7279;
+  color: #E17373;
 }
 
 .run-dialog-completion-box {
@@ -1123,7 +1123,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
   background-color: rgba(133, 143, 162, 0.35);
   border: 1px solid rgba(53, 59, 69, 0.35);
   box-shadow: none;
-  background-color: #1e1f26;
+  background-color: #16181c;
   border-color: #6CB6EB;
 }
 
@@ -1141,7 +1141,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 }
 
 .mount-password-reask {
-  color: #DEB974;
+  color: #CE9C3D;
 }
 
 .show-processes-dialog,
@@ -1492,7 +1492,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 }
 
 .window-list-box:highlight {
-  background-color: rgba(236, 114, 121, 0.5);
+  background-color: rgba(225, 115, 115, 0.5);
 }
 
 .window-list-item-label {
@@ -1645,8 +1645,8 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 }
 
 .window-list-item-demands-attention {
-  background-gradient-start: #DEB974;
-  background-gradient-end: #DEB974;
+  background-gradient-start: #CE9C3D;
+  background-gradient-end: #CE9C3D;
 }
 
 .window-list-preview {
@@ -1663,7 +1663,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 }
 
 .grouped-window-list-thumbnail-alert {
-  background-color: rgba(236, 114, 121, 0.5);
+  background-color: rgba(225, 115, 115, 0.5);
 }
 
 .grouped-window-list-thumbnail-menu .item-box {
@@ -1830,8 +1830,8 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 }
 
 .grouped-window-list-item-demands-attention {
-  background-gradient-start: #DEB974;
-  background-gradient-end: #DEB974;
+  background-gradient-start: #CE9C3D;
+  background-gradient-end: #CE9C3D;
 }
 
 .sound-button {
@@ -2028,16 +2028,16 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 }
 
 .workspace-graph .workspace .windows {
-  -active-window-background: #464959;
+  -active-window-background: #3f434f;
   -active-window-border: rgba(0, 0, 0, 0.8);
-  -inactive-window-background: #464959;
+  -inactive-window-background: #3f434f;
   -inactive-window-border: rgba(0, 0, 0, 0.8);
 }
 
 .workspace-graph .workspace:active .windows {
-  -active-window-background: #515568;
+  -active-window-background: #4b4f5d;
   -active-window-border: rgba(0, 0, 0, 0.8);
-  -inactive-window-background: #2f323d;
+  -inactive-window-background: #292b33;
   -inactive-window-border: rgba(0, 0, 0, 0.8);
 }
 
@@ -2160,7 +2160,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 .applet-box:highlight {
   background-image: none;
   border-image: none;
-  background-color: rgba(236, 114, 121, 0.5);
+  background-color: rgba(225, 115, 115, 0.5);
 }
 
 .applet-label {
@@ -2203,7 +2203,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 }
 
 .desklet:highlight {
-  background-color: rgba(236, 114, 121, 0.5);
+  background-color: rgba(225, 115, 115, 0.5);
 }
 
 .desklet-with-borders {
@@ -2214,7 +2214,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 }
 
 .desklet-with-borders:highlight {
-  background-color: rgba(236, 114, 121, 0.5);
+  background-color: rgba(225, 115, 115, 0.5);
 }
 
 .desklet-with-borders-and-header {
@@ -2228,7 +2228,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 }
 
 .desklet-with-borders-and-header:highlight {
-  background-color: rgba(236, 114, 121, 0.5);
+  background-color: rgba(225, 115, 115, 0.5);
 }
 
 .desklet-header {
