--- a/src/gtk/sass/_colors.scss
+++ b/src/gtk/sass/_colors.scss
@@ -22,7 +22,7 @@ $base_color: if($variant =='light', #FAFAFA, #33353F);
   $base_color: if($variant =='light', #FAFAFA, #333648);
 }
 
-$selected_bg_color: #F0544C;
+$selected_bg_color: $text_color;
 @if $color=='red' { $selected_bg_color: if($variant =='light', #D05858, #EC7279); }
 @if $color=='yellow' { $selected_bg_color: if($variant =='light', #BE7E05, #DEB974); }
 @if $color=='green' { $selected_bg_color: if($variant =='light', #608E32, #A0C980); }
@@ -31,20 +31,20 @@ $selected_bg_color: #F0544C;
 @if $color=='purple' { $selected_bg_color: if($variant =='light', #B05CCC, #D38AEA); }
 $selected_fg_color: $base_color;
 
-$success_color: if($variant =='light', #76AF6F, #A0C980);
-$success_fg_color: $fg_color;
-
-$warning_color: if($variant =='light', #CE9C3D, #DEB974);
-$warning_fg_color: $fg_color;
-
-$error_color: if($variant =='light', #E17373, #EC7279);
-$error_fg_color: $fg_color;
-
 $destructive_color: #BE5046;
-$destructive_fg_color: white;
+$destructive_fg_color: #FAFAFA;
 
-$suggested_color: $selected_bg_color;
-$suggested_fg_color: $selected_fg_color;
+$error_color: #E17373;
+$error_fg_color: #FAFAFA;
+
+$warning_color: #CE9C3D;
+$warning_fg_color: #FAFAFA;
+
+$success_color: #76AF6F;
+$success_fg_color: #FAFAFA;
+
+$suggested_color: #6996E0;
+$suggested_fg_color: #FAFAFA;
 
 $progress_color: $selected_bg_color;
 $drop_target_color: $progress_color;
@@ -70,12 +70,12 @@ $insensitive_bg_color: if($variant == 'light', mix($bg_color, $base_color, 40%),
 
 $header_bg: $bg_color;
 @if $header=='light' { $header_bg: #E8EBF0; }
-@if $header=='dark' and $color=='red' { $header_bg: if($variant =='light', #2C2E34, darken(#2C2E34, 3%)); }
-@if $header=='dark' and $color=='yellow' { $header_bg: if($variant =='light', #2C2E34, darken(#2C2E34, 3%)); }
-@if $header=='dark' and $color=='green' { $header_bg: if($variant =='light', #2C2E34, darken(#2C2E34, 3%)); }
-@if $header=='dark' and $color=='cyan' { $header_bg: if($variant =='light', #2B2D37, darken(#2B2D37, 3%)); }
-@if $header=='dark' and $color=='blue' { $header_bg: if($variant =='light', #2B2D37, darken(#2B2D37, 3%)); }
-@if $header=='dark' and $color=='purple' { $header_bg: if($variant =='light', #2B2D3A, darken(#2B2D3A, 3%)); }
+@if $header=='dark' and $color=='red' { $header_bg: if($variant =='light', #24262A, darken(#24262A, 3%)); }
+@if $header=='dark' and $color=='yellow' { $header_bg: if($variant =='light', #24262A, darken(#24262A, 3%)); }
+@if $header=='dark' and $color=='green' { $header_bg: if($variant =='light', #24262A, darken(#24262A, 3%)); }
+@if $header=='dark' and $color=='cyan' { $header_bg: if($variant =='light', #24262D, darken(#24262D, 3%)); }
+@if $header=='dark' and $color=='blue' { $header_bg: if($variant =='light', #24262D, darken(#24262D, 3%)); }
+@if $header=='dark' and $color=='purple' { $header_bg: if($variant =='light', #252630, darken(#252630, 3%)); }
 
 $header_bg_backdrop: if($header == 'light', lighten($header_bg, 6%), lighten($header_bg, 5%));
 $header_border: if($header == 'light', rgba(black, 0.15), rgba(black, 0.25));
@@ -102,12 +102,12 @@ $osd_insensitive_fg_color: mix($osd_fg_color, opacify($osd_bg_color, 1), 30%);
 
 // keep dark colors in dark headers
 $panel_bg: $bg_color;
-@if $header=='dark' and $color=='red' { $panel_bg: #2C2E34; }
-@if $header=='dark' and $color=='yellow' { $panel_bg: #2C2E34; }
-@if $header=='dark' and $color=='green' { $panel_bg: #2C2E34; }
-@if $header=='dark' and $color=='cyan' { $panel_bg: #2B2D37; }
-@if $header=='dark' and $color=='blue' { $panel_bg: #2B2D37; }
-@if $header=='dark' and $color=='purple' { $panel_bg: #2B2D3A; }
+@if $header=='dark' and $color=='red' { $panel_bg: #24262A; }
+@if $header=='dark' and $color=='yellow' { $panel_bg: #24262A; }
+@if $header=='dark' and $color=='green' { $panel_bg: #24262A; }
+@if $header=='dark' and $color=='cyan' { $panel_bg: #24262D; }
+@if $header=='dark' and $color=='blue' { $panel_bg: #24262D; }
+@if $header=='dark' and $color=='purple' { $panel_bg: #252630; }
 
 $panel_fg: $fg_color;
 @if $header == 'dark' { $panel_fg: #DDE2E7; }
