--- a/src/gtk/sass/_colors.scss
+++ b/src/gtk/sass/_colors.scss
@@ -70,12 +70,12 @@ $insensitive_bg_color: if($variant == 'light', mix($bg_color, $base_color, 40%),
 
 $header_bg: $bg_color;
 @if $header=='light' { $header_bg: #E8EBF0; }
-@if $header=='dark' and $color=='red' { $header_bg: if($variant =='light', #24262A, darken(#24262A, 3%)); }
-@if $header=='dark' and $color=='yellow' { $header_bg: if($variant =='light', #24262A, darken(#24262A, 3%)); }
-@if $header=='dark' and $color=='green' { $header_bg: if($variant =='light', #24262A, darken(#24262A, 3%)); }
-@if $header=='dark' and $color=='cyan' { $header_bg: if($variant =='light', #24262D, darken(#24262D, 3%)); }
-@if $header=='dark' and $color=='blue' { $header_bg: if($variant =='light', #24262D, darken(#24262D, 3%)); }
-@if $header=='dark' and $color=='purple' { $header_bg: if($variant =='light', #252630, darken(#252630, 3%)); }
+@if $header=='dark' and $color=='red' { $header_bg: #24262A; }
+@if $header=='dark' and $color=='yellow' { $header_bg: #24262A; }
+@if $header=='dark' and $color=='green' { $header_bg: #24262A; }
+@if $header=='dark' and $color=='cyan' { $header_bg: #24262D; }
+@if $header=='dark' and $color=='blue' { $header_bg: #24262D; }
+@if $header=='dark' and $color=='purple' { $header_bg: #252630; }
 
 $header_bg_backdrop: if($header == 'light', lighten($header_bg, 6%), lighten($header_bg, 5%));
 $header_border: if($header == 'light', rgba(black, 0.15), rgba(black, 0.25));
